Fix some fun layout issues with the training UI.

--- a/style.less
+++ b/style.less
@@ -652,6 +652,10 @@ body.nothing-scanned {
     padding: 1rem 1rem 0;
   }
 
+  .catalog {
+    clear: both;
+  }
+
   dl {
     dt {
       margin-top: .5em;
